--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     background: linear-gradient(to right,rgb(0, 75, 100),blue);
 }
 .rect{
+    /* margin-left: -20%; */
     width: 300px;
     height: 99.62vh;
     background: linear-gradient(to right,rgb(0, 255, 170),blue);
