--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     background: linear-gradient(to right,rgb(0, 75, 100),blue);
 }
 .rect{
-    /* margin-left: -20%; */
+    margin-left: -20%;
     width: 300px;
     height: 99.62vh;
     background: linear-gradient(to right,rgb(0, 255, 170),blue);
@@ -48,11 +48,12 @@ i:hover{
 .close{
     position: absolute;
     top: 0;
-    left: 15.5%;
+    left: 0;
     cursor: pointer;
     font-size: 50px;
     width: 60px;
     display: block;
+    transition: .3s linear;
 }
 .fa-bars{
 position: absolute;
@@ -66,4 +67,15 @@ display: none;
 .fa-times:hover,
 .fa-bars:hover{
     color: red;
+}
+.hide{
+    display: none;
+    left : 0;
+}
+.show{
+    display: block;
+    margin-left: 0;
+}
+.burger{
+left: 15.5%;
 }
